--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,10 @@ on:
 jobs:
 
   build:
-    runs-on: ubuntu-latest
+    strategy:
+       matrix:
+         os: [ ubuntu-latest, macos-latest, windows-latest ]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
 
@@ -19,7 +22,15 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: go build -v ./...
+      run: 
+         go version
+         go get -u golang.org/x/crypto/ssh
+         go get github.com/TwiN/go-color
+         go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run:
+         go version
+         go get -u golang.org/x/crypto/ssh
+         go get github.com/TwiN/go-color
+         go test -v ./...
