--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -4,7 +4,10 @@ on:
   push:
     tags:
       - "*"
-
+      
+permissions:
+   contents: write
+   
 jobs:
   build:
     name: honeydet release
@@ -18,16 +21,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
       - name: Set up Go 1.20
         uses: actions/setup-go@v4
-        with:
-          go-version: 1.20
-        id: go
-
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@master
+        uses: goreleaser/goreleaser-action@v5
         with:
+          distribution: goreleaser
           version: latest
           args: release --clean
         env:
