change gets to install

--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -18,8 +18,8 @@ jobs:
 
     steps:
       - run: |
-          go get -u golang.org/x/crypto/ssh
-          go get github.com/TwiN/go-color   
+          go install golang.org/x/crypto/ssh
+          go install github.com/TwiN/go-color   
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
         with:
