--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -17,15 +17,17 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - run: |
-          go install golang.org/x/crypto/ssh@latest
-          go install github.com/TwiN/go-color@latest
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Set up Go 1.20
         uses: actions/setup-go@v4
+      - name: Test
+        run: |
+            go version
+            go get -u golang.org/x/crypto/ssh
+            go get github.com/TwiN/go-color
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
