--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -13,7 +13,7 @@ jobs:
     name: honeydet release
     strategy:
        matrix:
-         os: [ ubuntu-latest, macos-latest, windows-latest ]
+         os: [ ubuntu-latest ]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -33,6 +33,6 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: release --clean
+          args: release --clean --skip-validate
         env:
           GITHUB_TOKEN: ${{ secrets.GO_RELEASER_GITHUB_TOKEN }}
