--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -29,6 +29,8 @@ jobs:
             go get -u golang.org/x/crypto/ssh
             go get github.com/TwiN/go-color
             go get github.com/simonvetter/modbus
+            go get github.com/tomsteele/go-shodan
+            go get golang.org/x/sys          
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
