--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,15 +24,17 @@ jobs:
     - name: Build
       run: |
          go version
-         go get -u golang.org/x/crypto/ssh
-         go get github.com/TwiN/go-color
-         go get github.com/simonvetter/modbus
+            go get -u golang.org/x/crypto/ssh
+            go get github.com/TwiN/go-color
+            go get github.com/simonvetter/modbus
+            go get github.com/tomsteele/go-shodan
          go build -v ./...
 
     - name: Test
       run: |
          go version
-         go get -u golang.org/x/crypto/ssh
-         go get github.com/TwiN/go-color
-         go get github.com/simonvetter/modbus
+            go get -u golang.org/x/crypto/ssh
+            go get github.com/TwiN/go-color
+            go get github.com/simonvetter/modbus
+            go get github.com/tomsteele/go-shodan
          go test -v ./...
