--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   honeydet:
-    image: honeydet
+    image: referefrefref/honeydet
     ports:
       - "8888:8888"
     command: ["/root/honeydet", "-w"]
